# khora

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
crates/khora-cdp/: Cargo.toml
crates/khora-cdp/src/: chrome.rs  client.rs  lib.rs  session.rs
crates/khora-cli/: Cargo.toml
crates/khora-cli/src/: main.rs
crates/khora-cli/tests/: cli.rs
crates/khora-core/: Cargo.toml
crates/khora-core/src/: config.rs  element.rs  error.rs  lib.rs  output.rs  session.rs
docs/: INDEX.md  architecture.md  usage.md
tests/e2e/: fixture.html  qa.sh
