[workspace]
resolver = "2"
members = ["crates/khora-core", "crates/khora-cdp", "crates/khora-cli"]

[workspace.package]
version = "0.3.3"
edition = "2021"
license = "MIT"
repository = "https://github.com/simonspoon/khora"
keywords = ["web", "automation", "chrome", "testing", "cdp"]
categories = ["development-tools::testing"]

[workspace.dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "time", "macros", "process", "fs"] }
