[package]
name = "khora-cdp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Chrome DevTools Protocol client for Khora web automation"

[dependencies]
khora-core = { path = "../khora-core" }
chromiumoxide = { version = "0.9", default-features = false }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
futures = "0.3"
which = "8"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
