[package]
name = "khora-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI binary for Khora web automation"

[[bin]]
name = "khora"
path = "src/main.rs"

[dependencies]
khora-core = { path = "../khora-core" }
khora-cdp = { path = "../khora-cdp" }
clap = { version = "4", features = ["derive", "env"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
